src/objects/CodeReviewHistoric__b.object
<CustomObject>
    <fields>
        <fullName>CanBeMerged__c</fullName>
        <label>Can Be Merged</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeReviewDate__c</fullName>
        <label>Code Review Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>CodeReviewsHistoric</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story__c</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipName>StoriesHistoric</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Code Review Historic</label>
    <pluralLabel>Code Reviews Historic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>